--- a/index.html
+++ b/index.html
@@ -1,39 +1,39 @@
 <HTML>
 <HEAD>
-<TITLE>Сашко Петров</TITLE>
+<TITLE>Р“РѕР»РѕРІРЅР° СЃС‚РѕСЂРёРЅРєР°</TITLE>
 </HEAD>
-<BODY BACKGROUND="C:\Users\алекс\Desktop\Сайт\Images/fon-40.gif">
-<H1><FONT COLOR="Orange"><CENTER>ГОЛОВНА СТОРІНКА</FONT></CENTER></H1>
-<H1><FONT COLOR="White"><CENTER>Зарас ми поглянемо пару фотографій про мене:</CENTER></FONT></H1>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20180103_173907.jpg">Проведення час з друзями і дівчиною</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20180208_194948.jpg">Ігра на гітарі:)</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20180216_222429.jpg">Ігра в покер з друзями</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20180314_134307.jpg">Слідкую за репетиціями</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20180314_142229.jpg">Ходжу на чужі уроки частіше ніж на свої</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20180315_123214.jpg">Люблю Діану:*</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20180328_110343.jpg">Беру участь в виступах</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20180420_191624.jpg">фотка</A></LI>
-<H3><FONT COLOR="Silver">Я Петров Сашко люблю слухати музику і вот список моїх олюбених  <A HREF="C:\Users\алекс\Desktop\Сайт\Images/1.docx">исполнителів</FONT></A></H3>
-<H3>Также я відвідую різний тип діяльності1</H3>
+<BODY BACKGROUND="C:\Users\Г Г«ГҐГЄГ±\Desktop\Г‘Г Г©ГІ\Images/fon-40.gif">
+<H1><FONT COLOR="Orange"><CENTER>ГѓГЋГ‹ГЋГ‚ГЌГЂ Г‘Г’ГЋГђВІГЌГЉГЂ</FONT></CENTER></H1>
+<H1><FONT COLOR="White"><CENTER>Г‡Г Г°Г Г± Г¬ГЁ ГЇГ®ГЈГ«ГїГ­ГҐГ¬Г® ГЇГ Г°Гі ГґГ®ГІГ®ГЈГ°Г ГґВіГ© ГЇГ°Г® Г¬ГҐГ­ГҐ:</CENTER></FONT></H1>
+<LI><A HREF="C:\Users\Г Г«ГҐГЄГ±\Desktop\Г‘Г Г©ГІ\Images/20180103_173907.jpg">ГЏГ°Г®ГўГҐГ¤ГҐГ­Г­Гї Г·Г Г± Г§ Г¤Г°ГіГ§ГїГ¬ГЁ Ві Г¤ВіГўГ·ГЁГ­Г®Гѕ</A></LI>
+<LI><A HREF="C:\Users\Г Г«ГҐГЄГ±\Desktop\Г‘Г Г©ГІ\Images/20180208_194948.jpg">ВІГЈГ°Г  Г­Г  ГЈВіГІГ Г°Ві:)</A></LI>
+<LI><A HREF="C:\Users\Г Г«ГҐГЄГ±\Desktop\Г‘Г Г©ГІ\Images/20180216_222429.jpg">ВІГЈГ°Г  Гў ГЇГ®ГЄГҐГ° Г§ Г¤Г°ГіГ§ГїГ¬ГЁ</A></LI>
+<LI><A HREF="C:\Users\Г Г«ГҐГЄГ±\Desktop\Г‘Г Г©ГІ\Images/20180314_134307.jpg">Г‘Г«ВіГ¤ГЄГіГѕ Г§Г  Г°ГҐГЇГҐГІГЁГ¶ВіГїГ¬ГЁ</A></LI>
+<LI><A HREF="C:\Users\Г Г«ГҐГЄГ±\Desktop\Г‘Г Г©ГІ\Images/20180314_142229.jpg">Г•Г®Г¤Г¦Гі Г­Г  Г·ГіГ¦Ві ГіГ°Г®ГЄГЁ Г·Г Г±ГІВіГёГҐ Г­ВіГ¦ Г­Г  Г±ГўГ®Вї</A></LI>
+<LI><A HREF="C:\Users\Г Г«ГҐГЄГ±\Desktop\Г‘Г Г©ГІ\Images/20180315_123214.jpg">Г‹ГѕГЎГ«Гѕ Г„ВіГ Г­Гі:*</A></LI>
+<LI><A HREF="C:\Users\Г Г«ГҐГЄГ±\Desktop\Г‘Г Г©ГІ\Images/20180328_110343.jpg">ГЃГҐГ°Гі ГіГ·Г Г±ГІГј Гў ГўГЁГ±ГІГіГЇГ Гµ</A></LI>
+<LI><A HREF="C:\Users\Г Г«ГҐГЄГ±\Desktop\Г‘Г Г©ГІ\Images/20180420_191624.jpg">ГґГ®ГІГЄГ </A></LI>
+<H3><FONT COLOR="Silver">Гџ ГЏГҐГІГ°Г®Гў Г‘Г ГёГЄГ® Г«ГѕГЎГ«Гѕ Г±Г«ГіГµГ ГІГЁ Г¬ГіГ§ГЁГЄГі Ві ГўГ®ГІ Г±ГЇГЁГ±Г®ГЄ Г¬Г®ВїГµ Г®Г«ГѕГЎГҐГ­ГЁГµ  <A HREF="C:\Users\Г Г«ГҐГЄГ±\Desktop\Г‘Г Г©ГІ\Images/1.docx">ГЁГ±ГЇГ®Г«Г­ГЁГІГҐГ«ВіГў</FONT></A></H3>
+<H3>Г’Г ГЄГ¦ГҐ Гї ГўВіГ¤ГўВіГ¤ГіГѕ Г°ВіГ§Г­ГЁГ© ГІГЁГЇ Г¤ВіГїГ«ГјГ­Г®Г±ГІВі1</H3>
 <UL TYPE="SQVARE">
 <OL TYPE="1" START="1">
-<LI><FONT COLOR="YELLOW">Футбол</FONT></LI>
-<LI><FONT COLOR="BLACK">Баскетбол</FONT></LI>
-<LI><FONT COLOR="BLUE">Фолейбол</FONT></LI>
-<LI><FONT COLOR="SILVER">Театральний</FONT></LI>
+<LI><FONT COLOR="YELLOW">Г”ГіГІГЎГ®Г«</FONT></LI>
+<LI><FONT COLOR="BLACK">ГЃГ Г±ГЄГҐГІГЎГ®Г«</FONT></LI>
+<LI><FONT COLOR="BLUE">Г”Г®Г«ГҐГ©ГЎГ®Г«</FONT></LI>
+<LI><FONT COLOR="SILVER">Г’ГҐГ ГІГ°Г Г«ГјГ­ГЁГ©</FONT></LI>
 </UL>
-<H2>Мої олюблені предмети!</H2>
+<H2>ГЊГ®Вї Г®Г«ГѕГЎГ«ГҐГ­Ві ГЇГ°ГҐГ¤Г¬ГҐГІГЁ!</H2>
 <OL TYPE="1" START="1">
-<LI><FONT COLOR="YELLOW">УКР МОВА</FONT></LI>
-<LI><FONT COLOR="GREEN">Фізкультура</FONT></LI>
-<LI><FONT COLOR="BLECK">Інформатика</FONT></LI>
-<LI><FONT COLOR="BLUE">Математика</FONT></LI>
-<LI><FONT COLOR="PINK">Біологія</FONT></LI>
-<LI><FONT COLOR="SILVER">Трудове</FONT></LI>
-<MARQUEE><A HREF="C:\Users\алекс\Desktop\Сайт\Images/index2.HTML">Ну на цьому все переходимо на сайт моєї Діани</A></MARQUEE>
+<LI><FONT COLOR="YELLOW">Г“ГЉГђ ГЊГЋГ‚ГЂ</FONT></LI>
+<LI><FONT COLOR="GREEN">Г”ВіГ§ГЄГіГ«ГјГІГіГ°Г </FONT></LI>
+<LI><FONT COLOR="BLECK">ВІГ­ГґГ®Г°Г¬Г ГІГЁГЄГ </FONT></LI>
+<LI><FONT COLOR="BLUE">ГЊГ ГІГҐГ¬Г ГІГЁГЄГ </FONT></LI>
+<LI><FONT COLOR="PINK">ГЃВіГ®Г«Г®ГЈВіГї</FONT></LI>
+<LI><FONT COLOR="SILVER">Г’Г°ГіГ¤Г®ГўГҐ</FONT></LI>
+<MARQUEE><A HREF="C:\Users\Г Г«ГҐГЄГ±\Desktop\Г‘Г Г©ГІ\Images/index2.HTML">ГЌГі Г­Г  Г¶ГјГ®Г¬Гі ГўГ±ГҐ ГЇГҐГ°ГҐГµГ®Г¤ГЁГ¬Г® Г­Г  Г±Г Г©ГІ Г¬Г®ВєВї Г„ВіГ Г­ГЁ</A></MARQUEE>
 
 
-<img src="C:\Users\алекс\Desktop\Сайт\Images/20180420_191624.jpg" width="250" height="50%">
+<img src="C:\Users\Г Г«ГҐГЄГ±\Desktop\Г‘Г Г©ГІ\Images/20180420_191624.jpg" width="250" height="50%">
 
 </BODY>
 </HTML>
