--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<TITLE>Головна сторинка</TITLE>
+<TITLE>STORIES</TITLE>
 </HEAD>
 <BODY BACKGROUND="C:\Users\àëåêñ\Desktop\Ñàéò\Images/fon-40.gif">
 <H1><FONT COLOR="Orange"><CENTER>ÃÎËÎÂÍÀ ÑÒÎÐ²ÍÊÀ</FONT></CENTER></H1>
