--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 <LI><FONT COLOR="BLUE">Ìàòåìàòèêà</FONT></LI>
 <LI><FONT COLOR="PINK">Á³îëîã³ÿ</FONT></LI>
 <LI><FONT COLOR="SILVER">Òðóäîâå</FONT></LI>
-<MARQUEE><A HREF="C:\Users\àëåêñ\Desktop\Ñàéò\Images/index2.HTML">Íó íà öüîìó âñå ïåðåõîäèìî íà ñàéò ìîº¿ Ä³àíè</A></MARQUEE>
+<MARQUEE><A HREF="Images/index2.HTML">Íó íà öüîìó âñå ïåðåõîäèìî íà ñàéò ìîº¿ Ä³àíè</A></MARQUEE>
 
 
-<img src="C:\Users\àëåêñ\Desktop\Ñàéò\Images/20180420_191624.jpg" width="250" height="50%">
+<img src="Images/20180420_191624.jpg" width="250" height="50%">
 
 </BODY>
 </HTML>
