--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <BODY BACKGROUND="C:\Users\àëåêñ\Desktop\Ñàéò\Images/fon-40.gif">
 <H1><FONT COLOR="Orange"><CENTER>Головна сторинка</FONT></CENTER></H1>
 <H1><FONT COLOR="White"><CENTER>Çàðàñ ìè ïîãëÿíåìî ïàðó ôîòîãðàô³é ïðî ìåíå:</CENTER></FONT></H1>
-<LI><A HREF="C:\Users\àëåêñ\Desktop\Ñàéò\Images/20180103_173907.jpg">Ïðîâåäåííÿ ÷àñ ç äðóçÿìè ³ ä³â÷èíîþ</A></LI>
+<LI><A HREF="Images/20180103_173907.jpg">Ïðîâåäåííÿ ÷àñ ç äðóçÿìè ³ ä³â÷èíîþ</A></LI>
 <LI><A HREF="C:\Users\àëåêñ\Desktop\Ñàéò\Images/20180208_194948.jpg">²ãðà íà ã³òàð³:)</A></LI>
 <LI><A HREF="C:\Users\àëåêñ\Desktop\Ñàéò\Images/20180216_222429.jpg">²ãðà â ïîêåð ç äðóçÿìè</A></LI>
 <LI><A HREF="C:\Users\àëåêñ\Desktop\Ñàéò\Images/20180314_134307.jpg">Ñë³äêóþ çà ðåïåòèö³ÿìè</A></LI>
