--- a/index.html
+++ b/index.html
@@ -1,36 +1,37 @@
+<!DOCTYPE html>
 <HTML>
 <HEAD>
-<TITLE>Сайт</TITLE>
+<TITLE>Сашко Петров</TITLE>
 </HEAD>
-<BODY BACKGROUND="C:\Users\àëåêñ\Desktop\Ñàéò\Images/fon-40.gif">
-<H1><FONT COLOR="Orange"><CENTER>Головна сторинка</FONT></CENTER></H1>
-<H1><FONT COLOR="White"><CENTER>Çàðàñ ìè ïîãëÿíåìî ïàðó ôîòîãðàô³é ïðî ìåíå:</CENTER></FONT></H1>
-<LI><A HREF="Images/20180103_173907.jpg">Ïðîâåäåííÿ ÷àñ ç äðóçÿìè ³ ä³â÷èíîþ</A></LI>
-<LI><A HREF="C:\Users\àëåêñ\Desktop\Ñàéò\Images/20180208_194948.jpg">²ãðà íà ã³òàð³:)</A></LI>
-<LI><A HREF="C:\Users\àëåêñ\Desktop\Ñàéò\Images/20180216_222429.jpg">²ãðà â ïîêåð ç äðóçÿìè</A></LI>
-<LI><A HREF="C:\Users\àëåêñ\Desktop\Ñàéò\Images/20180314_134307.jpg">Ñë³äêóþ çà ðåïåòèö³ÿìè</A></LI>
-<LI><A HREF="C:\Users\àëåêñ\Desktop\Ñàéò\Images/20180314_142229.jpg">Õîäæó íà ÷óæ³ óðîêè ÷àñò³øå í³æ íà ñâî¿</A></LI>
-<LI><A HREF="C:\Users\àëåêñ\Desktop\Ñàéò\Images/20180315_123214.jpg">Ëþáëþ Ä³àíó:*</A></LI>
-<LI><A HREF="C:\Users\àëåêñ\Desktop\Ñàéò\Images/20180328_110343.jpg">Áåðó ó÷àñòü â âèñòóïàõ</A></LI>
-<LI><A HREF="C:\Users\àëåêñ\Desktop\Ñàéò\Images/20180420_191624.jpg">ôîòêà</A></LI>
-<H3><FONT COLOR="Silver">ß Ïåòðîâ Ñàøêî ëþáëþ ñëóõàòè ìóçèêó ³ âîò ñïèñîê ìî¿õ îëþáåíèõ  <A HREF="C:\Users\àëåêñ\Desktop\Ñàéò\Images/1.docx">èñïîëíèòåë³â</FONT></A></H3>
-<H3>Òàêæå ÿ â³äâ³äóþ ð³çíèé òèï ä³ÿëüíîñò³1</H3>
+<BODY BACKGROUND="Images/fon-40.gif">
+<H1><FONT COLOR="Orange"><CENTER>ГОЛОВНА СТОРІНКА</FONT></CENTER></H1>
+<H1><FONT COLOR="White"><CENTER>Зарас ми поглянемо пару фотографій про мене:</CENTER></FONT></H1>
+<LI><A HREF="Images/20180103_173907.jpg">Проведення час з друзями і дівчиною</A></LI>
+<LI><A HREF="Images/20180208_194948.jpg">Ігра на гітарі:)</A></LI>
+<LI><A HREF="Images/20180216_222429.jpg">Ігра в покер з друзями</A></LI>
+<LI><A HREF="Images/20180314_134307.jpg">Слідкую за репетиціями</A></LI>
+<LI><A HREF="Images/20180314_142229.jpg">Ходжу на чужі уроки частіше ніж на свої</A></LI>
+<LI><A HREF="Images/20180315_123214.jpg">Люблю Діану:*</A></LI>
+<LI><A HREF="Images/20180328_110343.jpg">Беру участь в виступах</A></LI>
+<LI><A HREF="Images/20180420_191624.jpg">фотка</A></LI>
+<H3><FONT COLOR="Silver">Я Петров Сашко люблю слухати музику і вот список моїх олюбених  <A HREF="C:\Users\алекс\Desktop\Сайт без имени 2\Images/1.docx">исполнителів</FONT></A></H3>
+<H3>Также я відвідую різний тип діяльності1</H3>
 <UL TYPE="SQVARE">
 <OL TYPE="1" START="1">
-<LI><FONT COLOR="YELLOW">Ôóòáîë</FONT></LI>
-<LI><FONT COLOR="BLACK">Áàñêåòáîë</FONT></LI>
-<LI><FONT COLOR="BLUE">Ôîëåéáîë</FONT></LI>
-<LI><FONT COLOR="SILVER">Òåàòðàëüíèé</FONT></LI>
+<LI><FONT COLOR="YELLOW">Футбол</FONT></LI>
+<LI><FONT COLOR="BLACK">Баскетбол</FONT></LI>
+<LI><FONT COLOR="BLUE">Фолейбол</FONT></LI>
+<LI><FONT COLOR="SILVER">Театральний</FONT></LI>
 </UL>
-<H2>Ìî¿ îëþáëåí³ ïðåäìåòè!</H2>
+<H2>Мої олюблені предмети!</H2>
 <OL TYPE="1" START="1">
-<LI><FONT COLOR="YELLOW">ÓÊÐ ÌÎÂÀ</FONT></LI>
-<LI><FONT COLOR="GREEN">Ô³çêóëüòóðà</FONT></LI>
-<LI><FONT COLOR="BLECK">²íôîðìàòèêà</FONT></LI>
-<LI><FONT COLOR="BLUE">Ìàòåìàòèêà</FONT></LI>
-<LI><FONT COLOR="PINK">Á³îëîã³ÿ</FONT></LI>
-<LI><FONT COLOR="SILVER">Òðóäîâå</FONT></LI>
-<MARQUEE><A HREF="Images/index2.HTML">Íó íà öüîìó âñå ïåðåõîäèìî íà ñàéò ìîº¿ Ä³àíè</A></MARQUEE>
+<LI><FONT COLOR="YELLOW">УКР МОВА</FONT></LI>
+<LI><FONT COLOR="GREEN">Фізкультура</FONT></LI>
+<LI><FONT COLOR="BLECK">Інформатика</FONT></LI>
+<LI><FONT COLOR="BLUE">Математика</FONT></LI>
+<LI><FONT COLOR="PINK">Біологія</FONT></LI>
+<LI><FONT COLOR="SILVER">Трудове</FONT></LI>
+<MARQUEE><A HREF="imeges/index2.HTML">Ну на цьому все переходимо на сайт моєї Діани</A></MARQUEE>
 
 
 <img src="Images/20180420_191624.jpg" width="250" height="50%">
