--- a/Images/index2.html
+++ b/Images/index2.html
@@ -1,39 +1,39 @@
 <HTML>
 <HEAD>
-<TITLE>Діанка Бугай</TITLE>
+<TITLE>Р”С–Р°РЅРєР° Р‘СѓРіР°Р№</TITLE>
 </HEAD>
-<BODY BACKGROUND="C:\Users\алекс\Desktop\Сайт\Images/poligon-2560x1600-4k-hd-cvetnoy-zeleniy-fon-225.jpg">
-<H1><FONT COLOR="Orange"><CENTER>ГОЛОВНА СТОРІНКА</FONT></CENTER></H1>
-<H1><FONT COLOR="White"><CENTER>Зарас ми поглянемо пару фотографій про мене:</CENTER></FONT></H1>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20170817_211523.jpg">Фотка</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20170817_211853.jpg">Фотка</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20170828_213712.jpg">Фотка</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20170901_105256.jpg">Фотка</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20171018_151823.jpg">Фотка</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт\Images/20171029_131928.jpg">Фотка</A></LI>
+<BODY BACKGROUND="Images/animaciya_sneg_9983.gif">
+<H1><FONT COLOR="Orange"><CENTER>Р“РћР›РћР’РќРђ РЎРўРћР Р†РќРљРђ</FONT></CENTER></H1>
+<H1><FONT COLOR="White"><CENTER>Р—Р°СЂР°СЃ РјРё РїРѕРіР»СЏРЅРµРјРѕ РїР°СЂСѓ С„РѕС‚РѕРіСЂР°С„С–Р№ РїСЂРѕ РјРµРЅРµ:</CENTER></FONT></H1>
+<LI><A HREF="Images/20170817_211523.jpg">Р¤РѕС‚РєР°</A></LI>
+<LI><A HREF="Images/20170817_211853.jpg">Р¤РѕС‚РєР°</A></LI>
+<LI><A HREF="Images/20170828_213712.jpg">Р¤РѕС‚РєР°</A></LI>
+<LI><A HREF="Images/20170901_105256.jpg">Р¤РѕС‚РєР°</A></LI>
+<LI><A HREF="Images/20171018_151823.jpg">Р¤РѕС‚РєР°</A></LI>
+<LI><A HREF="Images/20171029_131928.jpg">Р¤РѕС‚РєР°</A></LI>
 
 
-<H3><FONT COLOR="Silver">Я Діанка Бугай люблю слухати музику і вот список моїх олюбених  <A HREF="1.docx">исполнителів</FONT></A></H3>
-<H3>Я люблю</H3>
+<H3><FONT COLOR="Silver">РЇ Р”С–Р°РЅРєР° Р‘СѓРіР°Р№ Р»СЋР±Р»СЋ СЃР»СѓС…Р°С‚Рё РјСѓР·РёРєСѓ С– РІРѕС‚ СЃРїРёСЃРѕРє РјРѕС—С… РѕР»СЋР±РµРЅРёС…  <A HREF="C:\Users\Р°Р»РµРєСЃ\Desktop\РЎР°Р№С‚ Р±РµР· РёРјРµРЅРё 2\Images/1.docx">РёСЃРїРѕР»РЅРёС‚РµР»С–РІ</FONT></A></H3>
+<H3>РЇ Р»СЋР±Р»СЋ</H3>
 <UL TYPE="SQVARE">
 <OL TYPE="1" START="1">
-<LI><FONT COLOR="YELLOW">Танцювати</FONT></LI>
-<LI><FONT COLOR="BLACK">Грати волейбол</FONT></LI>
-<LI><FONT COLOR="BLUE">Дивитися кіно</FONT></LI>
-<LI><FONT COLOR="SILVER">Слухати музику</FONT></LI>
+<LI><FONT COLOR="YELLOW">РўР°РЅС†СЋРІР°С‚Рё</FONT></LI>
+<LI><FONT COLOR="BLACK">Р“СЂР°С‚Рё РІРѕР»РµР№Р±РѕР»</FONT></LI>
+<LI><FONT COLOR="BLUE">Р”РёРІРёС‚РёСЃСЏ РєС–РЅРѕ</FONT></LI>
+<LI><FONT COLOR="SILVER">РЎР»СѓС…Р°С‚Рё РјСѓР·РёРєСѓ</FONT></LI>
 </UL>
-<H2>Мої олюблені предмети!</H2>
+<H2>РњРѕС— РѕР»СЋР±Р»РµРЅС– РїСЂРµРґРјРµС‚Рё!</H2>
 <OL TYPE="1" START="1">
-<LI><FONT COLOR="YELLOW">УКР МОВА</FONT></LI>
-<LI><FONT COLOR="GREEN">Фізкультура</FONT></LI>
-<LI><FONT COLOR="BLECK">Інформатика</FONT></LI>
-<LI><FONT COLOR="BLUE">Математика</FONT></LI>
-<LI><FONT COLOR="PINK">Біологія</FONT></LI>
-<LI><FONT COLOR="SILVER">Трудове</FONT></LI>
-<MARQUEE><A HREF="C:\Users\алекс\Desktop\Сайт/index.html">Ну на цьому все переходимо на сайт мого Саші</A></MARQUEE>
+<LI><FONT COLOR="YELLOW">РЈРљР  РњРћР’Рђ</FONT></LI>
+<LI><FONT COLOR="GREEN">Р¤С–Р·РєСѓР»СЊС‚СѓСЂР°</FONT></LI>
+<LI><FONT COLOR="BLECK">Р†РЅС„РѕСЂРјР°С‚РёРєР°</FONT></LI>
+<LI><FONT COLOR="BLUE">РњР°С‚РµРјР°С‚РёРєР°</FONT></LI>
+<LI><FONT COLOR="PINK">Р‘С–РѕР»РѕРіС–СЏ</FONT></LI>
+<LI><FONT COLOR="SILVER">РўСЂСѓРґРѕРІРµ</FONT></LI>
+<MARQUEE><A HREF="index.html">РќСѓ РЅР° С†СЊРѕРјСѓ РІСЃРµ РїРµСЂРµС…РѕРґРёРјРѕ РЅР° СЃР°Р№С‚ РјРѕРіРѕ РЎР°С€С–</A></MARQUEE>
 
 
-<img src="C:\Users\алекс\Desktop\Сайт\Images/20171029_131928.jpg" width="250" height="50%">
+<img src="Images/20171029_131928.jpg" width="250" height="50%">
 
 </BODY>
 </HTML>
