--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <LI><FONT COLOR="BLUE">Математика</FONT></LI>
 <LI><FONT COLOR="PINK">Біологія</FONT></LI>
 <LI><FONT COLOR="SILVER">Трудове</FONT></LI>
-<MARQUEE><A HREF="images/index2.HTML">Ну на цьому все переходимо на сайт моєї Діани</A></MARQUEE>
+<MARQUEE><A HREF="Images/index2.html">Ну на цьому все переходимо на сайт моєї Діани</A></MARQUEE>
 
 
 <img src="Images/20180420_191624.jpg" width="250" height="50%">
