--- a/index2.html
+++ b/index2.html
@@ -6,15 +6,15 @@
 <BODY BACKGROUND="C:\Users\алекс\Desktop\Сайт без имени 2\Images/animaciya_sneg_9983.gif">
 <H1><FONT COLOR="Orange"><CENTER>ГОЛОВНА СТОРІНКА</FONT></CENTER></H1>
 <H1><FONT COLOR="White"><CENTER>Зарас ми поглянемо пару фотографій про мене:</CENTER></FONT></H1>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт без имени 2\Images/20170817_211523.jpg">Фотка</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт без имени 2\Images/20170817_211853.jpg">Фотка</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт без имени 2\Images/20170828_213712.jpg">Фотка</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт без имени 2\Images/20170901_105256.jpg">Фотка</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт без имени 2\Images/20171018_151823.jpg">Фотка</A></LI>
-<LI><A HREF="C:\Users\алекс\Desktop\Сайт без имени 2\Images/20171029_131928.jpg">Фотка</A></LI>
+<LI><A HREF="Images/20170817_211523.jpg">Фотка</A></LI>
+<LI><A HREF="Images/20170817_211853.jpg">Фотка</A></LI>
+<LI><A HREF="Images/20170828_213712.jpg">Фотка</A></LI>
+<LI><A HREF="Images/20170901_105256.jpg">Фотка</A></LI>
+<LI><A HREF="Images/20171018_151823.jpg">Фотка</A></LI>
+<LI><A HREF="Images/20171029_131928.jpg">Фотка</A></LI>
 
 
-<H3><FONT COLOR="Silver">Я Діанка Бугай люблю слухати музику і вот список моїх олюбених  <A HREF="C:\Users\алекс\Desktop\Сайт без имени 2\Images/1.docx">исполнителів</FONT></A></H3>
+<H3><FONT COLOR="Silver">Я Діанка Бугай люблю слухати музику і вот список моїх олюбених  <A HREF="Images/1.docx">исполнителів</FONT></A></H3>
 <H3>Я люблю</H3>
 <UL TYPE="SQVARE">
 <OL TYPE="1" START="1">
@@ -31,10 +31,10 @@
 <LI><FONT COLOR="BLUE">Математика</FONT></LI>
 <LI><FONT COLOR="PINK">Біологія</FONT></LI>
 <LI><FONT COLOR="SILVER">Трудове</FONT></LI>
-<MARQUEE><A HREF="C:\Users\алекс\Desktop\Сайт без имени 2/index.html">Ну на цьому все переходимо на сайт мого Саші</A></MARQUEE>
+<MARQUEE><A HREF="index.html">Ну на цьому все переходимо на сайт мого Саші</A></MARQUEE>
 
 
-<img src="C:\Users\алекс\Desktop\Сайт без имени 2\Images/20171029_131928.jpg" width="250" height="50%">
+<img src="Images/20171029_131928.jpg" width="250" height="50%">
 
 </BODY>
 </HTML>
