--- a/index1.html
+++ b/index1.html
@@ -2,7 +2,7 @@
 <HEAD>
 <TITLE>Діанка Бугай</TITLE>
 </HEAD>
-<BODY BACKGROUND="C:\Users\алекс\Desktop\Сайт без имени 2\Images/animaciya_sneg_9983.gif">
+<BODY BACKGROUND="Images/animaciya_sneg_9983.gif">
 <H1><FONT COLOR="Orange"><CENTER>ГОЛОВНА СТОРІНКА</FONT></CENTER></H1>
 <H1><FONT COLOR="White"><CENTER>Зарас ми поглянемо пару фотографій про мене:</CENTER></FONT></H1>
 <LI><A HREF="Images/20170817_211523.jpg">Фотка</A></LI>
