--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
 <LI><FONT COLOR="SILVER">Трудове</FONT></LI>
 <MARQUEE><A HREF="index1.html">Ну на цьому все переходимо на сайт моєї Діани</A></MARQUEE>
 
-
-<img src="Images/20180420_191624.jpg" width="250" height="50%">
+ <img src="Images/20180420_191624.jpg" width="250" height="50%">
+  
+  
+  
+  
+  <video width="500" height="300" controls>
+<source src="images/VID_23510716_002411_003.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
 
 </BODY>
 </HTML>
