--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <OL TYPE="1" START="1">
 <LI><FONT COLOR="YELLOW">Футбол</FONT></LI>
 <LI><FONT COLOR="BLACK">Баскетбол</FONT></LI>
-<LI><FONT COLOR="BLUE">Фолейбол</FONT></LI>
+<LI><FONT COLOR="BLUE">Волейбол</FONT></LI>
 <LI><FONT COLOR="SILVER">Театральний</FONT></LI>
 </UL>
 <H2>Мої олюблені предмети!</H2>
