--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <LI><FONT COLOR="BLUE">Математика</FONT></LI>
 <LI><FONT COLOR="PINK">Біологія</FONT></LI>
 <LI><FONT COLOR="SILVER">Трудове</FONT></LI>
+<LI><A HREF="https://www.instagram.com/alexpetrov966/?hl=uk">Мій Інстаграм</A></LI>
 <MARQUEE><A HREF="index1.html">Ну на цьому все переходимо на сайт моєї Діани</A></MARQUEE>
 
  <img src="Images/20180420_191624.jpg" width="250" height="50%">
