--- a/index1.html
+++ b/index1.html
@@ -30,6 +30,7 @@
 <LI><FONT COLOR="BLUE">Математика</FONT></LI>
 <LI><FONT COLOR="PINK">Біологія</FONT></LI>
 <LI><FONT COLOR="SILVER">Трудове</FONT></LI>
+<LI><A HREF="https://www.instagram.com/diana_09851/?hl=uk">Мій Інстаграм</A></LI>
 <MARQUEE><A HREF="index.html">Ну на цьому все переходимо на сайт мого Саші</A></MARQUEE>
 
 
