--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <LI><A HREF="Images/20180315_123214.jpg">Люблю Діану:*</A></LI>
 <LI><A HREF="Images/20180328_110343.jpg">Беру участь в виступах</A></LI>
 <LI><A HREF="Images/20180420_191624.jpg">фотка</A></LI>
-<H3><FONT COLOR="Silver">Я Петров Сашко люблю слухати музику і вот список моїх олюбених  <A HREF="">исполнителів</FONT></A></H3>
+<H3><FONT COLOR="Silver">Коди елементів які іспользувалися для созданія <A HREF="Images/1.docx">сайта</FONT></A></H3>
 <H3>Также я відвідую різний тип діяльності1</H3>
 <UL TYPE="SQVARE">
 <OL TYPE="1" START="1">
