--- a/index1.html
+++ b/index1.html
@@ -13,7 +13,7 @@
 <LI><A HREF="Images/20171029_131928.jpg">Фотка</A></LI>
 
 
-<H3><FONT COLOR="Silver">Я Діанка Бугай люблю слухати музику і вот список моїх олюбених  <A HREF="Images/1.docx">исполнителів</FONT></A></H3>
+<H3><FONT COLOR="Silver">Коди елементів які іспользувалися для созданія <A HREF="Images/1.docx">сайта</FONT></A></H3>
 <H3>Я люблю</H3>
 <UL TYPE="SQVARE">
 <OL TYPE="1" START="1">
